# dbd-trial-mapper

./: .env.example  .gitignore  .prettierignore  README.md  biome.json  package.json  svelte.config.js  vite.config.js  vite.config.ts
.github/: code-quality.yml
.github/workflows/: build-release.yml  code-quality.yml
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  main.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: settings.svelte.ts  supabase.ts  trial.ts
src/lib/components/: button.svelte  copy-lobby-id.svelte  create-lobby.svelte  header.svelte  icon-button.svelte  join-lobby.svelte  layout.svelte  leave-lobby.svelte  select-trial.svelte  toast.svelte  toaster.svelte  tooltip.svelte  trial-overlay.svelte
src/lib/hooks/: use-document-height.svelte.ts  use-dynamic-height.svelte.ts  use-dynamic-window-size.svelte.ts  use-realtime-lobby.svelte.ts  use-realtime-record.svelte.ts  use-realtime-record.ts  use-realtime.svelte.ts  use-show-window.ts  use-top-right-window-position.ts  use-window-position.ts
src/lib/schemas/: create-lobby.ts
src/lib/supabase/: client.ts  create-lobby.ts  leave-lobby.ts  login-with-provider.ts  sign-in-with-oauth.ts  sign-out.ts  types.ts
src/lib/utilities/: close-window.ts  get-lobby-from-user.ts  get-user.ts  promisify-image.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(authenticated)/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/lobby/: +page.ts  (+2 more)
(+70 files in other folders)
