[package]
name = "dbd-trial-mapper"
version = "0.1.0"
description = "DBD Trial Mapper"
authors = ["you"]
edition = "2021"

[lib]
name = "dbd_trial_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

