[package]
name = "dbd-trial-mapper"
version = "0.1.0"
description = "TrialSync"
authors = ["you"]
edition = "2021"

[lib]
name = "dbd_trial_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }


